js/src/test/base/errors/test.InsufficientFunds.d.ts
export default _default;
declare function _default(exchange: any, symbol: any, balance: any): Promise<void>;
